table data vertical align middle fix

--- a/public/assets/css/main.scss
+++ b/public/assets/css/main.scss
@@ -137,6 +137,6 @@ input.matchScoresModal {
    font-size: 28px;
 }
 
-tr td {
+tr, td {
    vertical-align: middle;
 }
